Changes with mod_fastcgi 2.2.3

 *) Leave STDOUT and STDERR open to the main server error_log.  This should
    eliminate a pile of protocol errors and having to track down 3rd party
    libs writing to stderr inadvertantly.  This doesn't mean these shouldn't
    be fixed in the application to use the FastCGI I/O, it just allows these
    applications to run when previously they'd crash and burn.

 *) Add the pass-header arg to server directives.

 *) Allow supplementary groups to be passed to spawned FastCGI applications (as
    is done for CGI) - at least until PR2580 is resolved.

 *) Initialize the default (empty) environment in a more socially acceptable
    way.

 *) Miscellaneous doc improvements based on notes I've collected up over the
    last few months.

 *) Fix a bug in the stderr handling introduced in 2.2.2.  There were conditions
    that resulted in not or improperly terminated strings.

 *) Fix the call to setsockopt() to disable Nagle.  [based on a bug report by
    Johannes Plassmann <johannes.plassmann@pdb.siemens.de>]

Changes with mod_fastcgi 2.2.2

 *) Added support for blocking connect()s by setting appConnTimeout to 0.
    Non-blocking connect()s (the default) can be troublesome on some platforms.
    Its expected that blocking connect()s will become the default (and
    non-blocking connect()s will become optional) in the next release.

 *) Dump a compile time error if the version of Apache is too old.

 *) Wrap the SIGPIPE handler manipulation code such that it is only applicable
    to Apache releases prior to 1.3.6.

 *) Minor tweaks for RUSSIAN_APACHE.  [Sergey Gershtein <sg@mplik.ru>]

 *) Dynamic updates: 
 
    Always restart a failed dynamic application if it is the last instance.
    This means there once started there will always be at least one process
    instance of a dynamic application.  
    
    Send PLEASE_START to the PM when a connect() results in an ECONNREFUSED.